# Execrises

./: .gitattributes  .gitignore  DATASETS_REFERENCE.md
Alien_AI/alien-ai-lab/: pyproject.toml
Alien_AI/alien-ai-lab/src/alien_ai_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Cats and Dogs/: dogs_cats_cnn.py  main.py  preprocessing.py
Chatbot/: preprocessing.py
Decision Trees/: DT.py
Image Processing/: main.py
MallCustomer_KMeans/: kmeans_model.py  preporcessing.py
Module Assessments/: bc_1.py  bc_2.ipynb  chocolate.py  credit_risks_knn.py  credit_risks_others.py  football.py  goodreads_recommender.ipynb  medical_apointments.ipynb  product_demand.ipynb  shakespeare.ipynb  sms_spam_detector.ipynb  tweet_sentiment_analysis.ipynb  wholesales.ipynb
Module Assessments/chatbot/: chatbot.py  model.py  preprocess.py
Sentiment Analysis/: main.py  model.py  model_manual.py  preprocessing.py
SpotifyClassification/: model.py  processing.py  testing.py
Stock Prices/: preprocessing.py
Weather Forecast/: main.py  preprocessing.py
Yahoo Answers/: main.py  preprocessing.py
